--- a/src/pug-components/layout.pug
+++ b/src/pug-components/layout.pug
@@ -132,10 +132,10 @@ html(lang="ru-Ru")
                             a(class=page == 'Главная' ? "link-spy":"" href=page == 'Главная' ?"#feedbackSection":"index.html#feedbackSection") Отзывы
                         li.nav__item
                             a(class=page == 'Главная' ? "link-spy":"" href=page == 'Главная' ?"#contactSection":"index.html#contactSection") Контакты
-                        li.nav__item.nav__working-hours.working-hours
-                                span.working-hours__item.working-hours__item_b Режим работы:
-                                span.working-hours__item с 9:00 до 18:00 (Пн-Пт),
-                                span.working-hours__item с 10:00 до 15:00 (Сб-Вс)
+                        //li.nav__item.nav__working-hours.working-hours
+                        //        span.working-hours__item.working-hours__item_b Режим работы:
+                        //        span.working-hours__item с 9:00 до 18:00 (Пн-Пт),
+                        //        span.working-hours__item с 10:00 до 15:00 (Сб-Вс)
 
 
             //if page == 'Главная'
