--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -1200,6 +1200,7 @@ ul.dropdown:after {
       top: 50%
       transform: translateY(-50%)
       left: 30px
+      margin: 0 20px 0 0
     }
     .burger {
       position: absolute;
