--- a/src/trash/css/common.css
+++ b/src/trash/css/common.css
@@ -856,6 +856,7 @@ ul.dropdown:after {
     top: 50%;
     transform: translateY(-50%);
     left: 30px;
+    margin: 0 20px 0 0;
   }
   .header .burger {
     position: absolute;
