Changed ЭКСТРА to ГОСТ in tables and articles

--- a/src/blok-haus.pug
+++ b/src/blok-haus.pug
@@ -78,7 +78,7 @@ block product
     p.article__p Модифицированный вариант вагонки производится в виде сегмента оцилиндрованного бревна с плоской внутренней и закругленной наружной стороной. Чаще используется дерево хвойных пород: сосна, ель, лиственница и пр., что не исключает возможности выбора другой древесины. Крепежная система "шип-паз" позволяет говорить о надежности и высокой скорости укладки блоков.
     h3.article__title Сортность
 
-    p.article__p Сортность блока хауса определяется следующими классами: А, В, С, Прима, Экстра.
+    p.article__p Сортность блока хауса определяется следующими классами: А, В, С, Прима, ГОСТ.
 
 
     p.article__p Мы специализируемся на досках класса А (первый сорт)- они выгодно отличается отсутствием механических повреждений и минимально возможным количеством сучков на погонный метр.
