--- a/src/brus-profilirovannyy.pug
+++ b/src/brus-profilirovannyy.pug
@@ -30,32 +30,32 @@ block product
                         th Цена за м3
                     tr
                         td 100х100х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 16
                         td.price 10950 руб.
                     tr
                         td 100х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 11
                         td.price 10950 руб.
                     tr
                         td 100х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 8
                         td.price 10950 руб.
                     tr
                         td 150х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 7
                         td.price 10950 руб.
                     tr
                         td 150х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 5
                         td.price 11200 руб.
                     tr
                         td 200х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 4
                         td.price 11200 руб.
 
@@ -71,32 +71,32 @@ block product
                         th Цена за м3
                     tr
                         td 100х100х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 16
                         td.price 12950 руб.
                     tr
                         td 100х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 11
                         td.price 12950 руб.
                     tr
                         td 100х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 8
                         td.price 12950 руб.
                     tr
                         td 150х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 7
                         td.price 12950 руб.
                     tr
                         td 150х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 5
                         td.price 13200 руб.
                     tr
                         td 200х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 4
                         td.price 13200 руб.
 
