--- a/src/brusok.pug
+++ b/src/brusok.pug
@@ -30,32 +30,32 @@ block product
                         th Цена за штуку
                     tr
                         td 25х50х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 266
                         td.price 21 руб.
                     tr
                         td 40х40х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 208
                         td.price 46 руб.
                     tr
                         td 40х50х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 166
                         td.price 55 руб.
                     tr
                         td 40х60х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 138
                         td.price 63 руб.
                     tr
                         td 50х50х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 133
                         td.price 63 руб.
                     tr
                         td 50х70х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 95
                         td.price 80 руб.
 
@@ -72,47 +72,47 @@ block product
                         th Цена за штуку
                     tr
                         td 40х60х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 416
                         td.price 106 руб.
                     tr
                         td 20х40х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 416
                         td.price 42 руб.
                     tr
                         td 20х50х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 333
                         td.price 46 руб.
                     tr
                         td 30х40х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 277
                         td.price 55 руб.
                     tr
                         td 30х50х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 222
                         td.price 68 руб.
                     tr
                         td 40х40х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 208
                         td.price 72 руб.
                     tr
                         td 40х50х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 166
                         td.price 85 руб.
                     tr
                         td 50х50х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 133
                         td.price 106 руб.
                     tr
                         td 50х70х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 95
                         td.price 144 руб.
 
