--- a/src/doska-obreznaya.pug
+++ b/src/doska-obreznaya.pug
@@ -138,52 +138,52 @@ block product
                         th Цена за м3
                     tr
                         td 100х100х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 16
                         td.price 9500 руб.
                     tr
                         td 25х100х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 66
                         td.price 9500 руб.
                     tr
                         td 25х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 44
                         td.price 9500 руб.
                     tr
                         td 25х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 33
                         td.price 9500 руб.
                     tr
                         td 40х100х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 41
                         td.price 9500 руб.
                     tr
                         td 40х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 27
                         td.price 9500 руб.
                     tr
                         td 40х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 20
                         td.price 9500 руб.
                     tr
                         td 50х100х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 33
                         td.price 9500 руб.
                     tr
                         td 50х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 22
                         td.price 9500 руб.
                     tr
                         td 50х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td 16
                         td.price 9500 руб.
 
