--- a/src/doska-polovaya.pug
+++ b/src/doska-polovaya.pug
@@ -30,19 +30,19 @@ block product
                         th Цена за м2
                     tr
                         td 35х90х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 450 руб.
                     tr
                         td 35х120х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 450 руб.
                     tr
                         td 35х140х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 450 руб.
                     tr
                         td 45х140х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 490 руб.
 
     .table#doska-suhaya-polovaya
@@ -56,23 +56,23 @@ block product
                         th Цена за м2
                     tr
                         td 28х140х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 495 руб.
                     tr
                         td 35х90х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 550 руб.
                     tr
                         td 35х120х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 550 руб.
                     tr
                         td 35х140х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 550 руб.
                     tr
                         td 45х140х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 590 руб.
 
     h3.article__title Свойства древесины
