--- a/src/doska-strogannay.pug
+++ b/src/doska-strogannay.pug
@@ -30,39 +30,39 @@ block product
                         th Цена за м3
                     tr
                         td 25х100х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 10200 руб.
                     tr
                         td 25х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 10200 руб.
                     tr
                         td 25х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 10200 руб.
                     tr
                         td 40х100х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 10350 руб.
                     tr
                         td 40х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 10350 руб.
                     tr
                         td 40х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 10350 руб.
                     tr
                         td 50х100х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 10350 руб.
                     tr
                         td 50х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 10350 руб.
                     tr
                         td 50х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 10350 руб.
 
 
@@ -78,39 +78,39 @@ block product
                         th Цена за м3
                     tr
                         td 25х100х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 10560 руб.
                     tr
                         td 25х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 10900 руб.
                     tr
                         td 25х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 12475 руб.
                     tr
                         td 40х100х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 12625 руб.
                     tr
                         td 40х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 12625 руб.
                     tr
                         td 40х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 12625 руб.
                     tr
                         td 50х100х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 13625 руб.
                     tr
                         td 50х150х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 13625 руб.
                     tr
                         td 50х200х6000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 13925 руб.
 
     h3.article__title Особенности древесины для досок
