--- a/src/fanera-laminirovannaya.pug
+++ b/src/fanera-laminirovannaya.pug
@@ -31,11 +31,11 @@ block product
                         th Цена за лист
                     tr
                         td 18х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1487 руб.
                     tr
                         td 21х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1742 руб.
 
     .table#fanera-laminirovannaya-1220h2440-rossiya
@@ -49,27 +49,27 @@ block product
                         th Цена за лист
                     tr
                         td 6х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1402 руб.
                     tr
                         td 9х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1742 руб.
                     tr
                         td 12х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1870 руб.
                     tr
                         td 15х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1955 руб.
                     tr
                         td 18х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 2125 руб.
                     tr
                         td 21х1220х2440
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 2380 руб.
 
 
@@ -84,27 +84,27 @@ block product
                         th Цена за лист
                     tr
                         td 6х1500х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 1870 руб.
                     tr
                         td 9х1500х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 2125 руб.
                     tr
                         td 12х1500х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 2550 руб.
                     tr
                         td 15х1500х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 2805 руб.
                     tr
                         td 18х1500х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 2975 руб.
                     tr
                         td 21х1500х3000
-                        td ЭКСТРА
+                        td ГОСТ
                         td.price 3655 руб.
 
 
