--- a/src/imitaciya-brusa.pug
+++ b/src/imitaciya-brusa.pug
@@ -84,19 +84,19 @@ block product
     //                    td.price 289 руб.
     //                tr
     //                    td 18х140х6000
-    //                    td ЭКСТРА
+    //                    td ГОСТ
     //                    td.price 323 руб.
     //                tr
     //                    td 18х190х6000
-    //                    td ЭКСТРА
+    //                    td ГОСТ
     //                    td.price 323 руб.
     //                tr
     //                    td 20х140х6000
-    //                    td ЭКСТРА
+    //                    td ГОСТ
     //                    td.price 340 руб.
     //                tr
     //                    td 20х190х6000
-    //                    td ЭКСТРА
+    //                    td ГОСТ
     //                    td.price 340 руб.
 
 
@@ -175,8 +175,8 @@ block product
 
     p.article__p Цена имитации бруса за метр квадратный определяется не только размерами, породой дерева, но и сортом.
     h3.article__title Сортамент
-    p.article__p Пиломатериал подразделяется на категории: Экстра, Прима, А АВ, В С. Разбежность между сортами заключается в количестве различных пороков на 1 м погонный.
-    p.article__p — Экстра, Прима – изделия с отлично обработанной поверхностью и минимальным количеством изъянов.
+    p.article__p Пиломатериал подразделяется на категории: ГОСТ, Прима, А АВ, В С. Разбежность между сортами заключается в количестве различных пороков на 1 м погонный.
+    p.article__p — ГОСТ, Прима – изделия с отлично обработанной поверхностью и минимальным количеством изъянов.
     p.article__p — А- присутствует небольшое количество сучков, трещин, смоляных кармашков.
     p.article__p — АB- допускаются смоляные карманы, трещины, невыпадающие сучки.
     p.article__p — С- сучки, неравномерность цвета, смоляные кармашки, трещины.
