--- a/src/parketnaya-doska.pug
+++ b/src/parketnaya-doska.pug
@@ -387,14 +387,14 @@ block product
                         td 5
                         td.price 2779 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 2
                         td 18х200
                         td 2
                         td 5
                         td.price 2023 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 3
                         td 18х200
                         td 3
