--- a/src/vagonka.pug
+++ b/src/vagonka.pug
@@ -79,7 +79,7 @@ block product
                     tr
                         td 14х120
                         td от 2 до 6
-                        td ЭКСТРА
+                        td ГОСТ
                         td 600 руб.
                     tr
                         td 14х120
@@ -111,7 +111,7 @@ block product
                     tr
                         td 15х96
                         td от 1 до 3
-                        td ЭКСТРА
+                        td ГОСТ
                         td 750 руб.
                     tr
                         td 15х96
