--- a/src/terrasnaya-doska.pug
+++ b/src/terrasnaya-doska.pug
@@ -33,7 +33,7 @@ block product
                         th Кол-во в упаковке, шт.
                         th Цена за упаковку
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 3
                         td 27х140
                         td 1,68
@@ -135,28 +135,28 @@ block product
                         td.price 986 руб.
 
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 2,8
                         td 27х142
                         td 1,7
                         td 1,59
                         td.price 2690 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 3
                         td 27х142
                         td 1,7
                         td 4
                         td.price 2885 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 3,5
                         td 27х142
                         td 1,99
                         td 4
                         td.price 3366 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 4
                         td 27х142
                         td 2,27
@@ -193,7 +193,7 @@ block product
                         td 4
                         td.price 1457 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 4
                         td 27х90
                         td 1,44
@@ -277,21 +277,21 @@ block product
                         td 4
                         td.price 1062 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 2,5
                         td 28х115
                         td 1,15
                         td 4
                         td.price 1946 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 3
                         td 28х115
                         td 1,38
                         td 4
                         td.price 2333 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 4
                         td 28х115
                         td 1,84
@@ -333,7 +333,7 @@ block product
                         td 4
                         td.price 833 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 3
                         td 28х120
                         td 1,44
@@ -417,28 +417,28 @@ block product
                         td 4
                         td.price 1942 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 2,5
                         td 28х140
                         td 1,4
                         td 4
                         td.price 2367 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 3
                         td 28х140
                         td 1,68
                         td 4
                         td.price 2843 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 3,5
                         td 28х140
                         td 1,96
                         td 4
                         td.price 3315 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 4
                         td 28х140
                         td 2,24
@@ -480,7 +480,7 @@ block product
                         td 3
                         td.price 2142 руб.
                     tr
-                        td Экстра
+                        td ГОСТ
                         td 3
                         td 40х140
                         td 1,26
@@ -503,7 +503,7 @@ block product
     p.article__p — «гладкий»
     p.article__p — «вельвет»
     p.article__p Вы можете выбрать террасную доску, которая подойдет вам не только по цене, но и по ряду характеристик декинга:Декинг представлен в двух вариантах исполнения:
-    p.article__p — сорт: Экстра, Прима, А, А-В, В, В-С, С и Эконом;
+    p.article__p — сорт: ГОСТ, Прима, А, А-В, В, В-С, С и Эконом;
     p.article__p — длина: 2,0-6,0 м;
     p.article__p — толщина: 25-45 мм;
     p.article__p — ширина: 115-143 мм.
