Changed ЭКСТРА to ГОСТ in tables and articles

--- a/src/parketnaya-doska.pug
+++ b/src/parketnaya-doska.pug
@@ -33,7 +33,7 @@ block product
                         th Кол-во в упаковке, шт.
                         th Цена за упаковку
                     tr
-                        td Э (Экстра)
+                        td ГОСТ
                         td 0,64
                         td 19х80
                         td 0,31
@@ -61,35 +61,35 @@ block product
                         td 6
                         td.price 119 руб.
                     tr
-                        td Э (Экстра)
+                        td ГОСТ
                         td 0,66
                         td 19х110
                         td 0,29
                         td 4
                         td.price 268 руб.
                     tr
-                        td Э (Экстра)
+                        td ГОСТ
                         td 0,99
                         td 19х110
                         td 0,44
                         td 4
                         td.price 467 руб.
                     tr
-                        td Э (Экстра)
+                        td ГОСТ
                         td 1,21
                         td 19х110
                         td 0,53
                         td 4
                         td.price 563 руб.
                     tr
-                        td Э (Экстра)
+                        td ГОСТ
                         td 1,54
                         td 19х110
                         td 0,68
                         td 4
                         td.price 722 руб.
                     tr
-                        td Э (Экстра)
+                        td ГОСТ
                         td 1,98
                         td 19х110
                         td 0,87
@@ -212,28 +212,28 @@ block product
                         td.price 260 руб.
 
                     tr
-                        td Э (Экстра)
+                        td ГОСТ
                         td 0,67
                         td 19х134
                         td 0,36
                         td 4
                         td.price 363 руб.
                     tr
-                        td Э (Экстра)
+                        td ГОСТ
                         td 0,98
                         td 19х134
                         td 0,53
                         td 4
                         td.price 626 руб.
                     tr
-                        td Э (Экстра)
+                        td ГОСТ
                         td 1,474
                         td 19х134
                         td 0,79
                         td 4
                         td.price 933 руб.
                     tr
-                        td Э (Экстра)
+                        td ГОСТ
                         td 2,01
                         td 19х134
                         td 1,08
