--- a/src/vagonka.pug
+++ b/src/vagonka.pug
@@ -128,7 +128,7 @@ block product
 
     p.article__p Каждый класс деревянной вагонки устанавливается согласно ее состоянию. Следующая классификация по группам позволяет легко подобрать оптимальный тип фасадного пиломатериала для работы:
     p.article__p Основные виды:
-    p.article__p — <b>"Экстра"</b>. Не имеет дефектов, обладает самой высокой ценой.
+    p.article__p — <b>"ГОСТ"</b>. Не имеет дефектов, обладает самой высокой ценой.
     p.article__p — <b>"Прима"</b>. Может включать минимальное количество сучков.
     p.article__p — <b>"A"</b>. Имеет незначительные природные дефекты.
     p.article__p — <b>"AB"</b>. Имеет минимум дефектов, дешевле группы "A".
