--- a/src/imitaciya-brusa.pug
+++ b/src/imitaciya-brusa.pug
@@ -123,7 +123,7 @@ block product
                         td.price 230 руб.
                     tr
                         td 20х140х6000
-                        td ВВ
+                        td В
                         td.price 270 руб.
                     tr
                         td 20х190х6000
@@ -168,13 +168,13 @@ block product
     h3.article__title Размеры
     p.article__p Размеры, предлагаемые компанией «STROY-ZAKAZ», соответствуют основным требованиям строительного рынка:
     p.article__p — длина от <b>2 до 6 метров;</b>
-    p.article__p — ширина от <b>145 до 190 мм;</b>
-    p.article__p — толщиной от <b>10 до 20 мм.</b>
+    p.article__p — ширина от <b>140 до 190 мм;</b>
+    p.article__p — толщиной от <b>16 до 20 мм.</b>
 
     p.article__p Особенность конструкции и диапазон размеров позволяют использовать имитацию бруса в различных работах. Изделия из сосны чаще используют для отделочных работ внутри помещения. Влагоустойчивая и долговечная древесина лиственницы незаменима для облицовки фасада.
 
     p.article__p Цена имитации бруса за метр квадратный определяется не только размерами, породой дерева, но и сортом.
-    h3.article__title Сортамент
+    h3.article__title Ассортимент
     p.article__p Пиломатериал подразделяется на категории: ГОСТ, Прима, А АВ, В С. Разбежность между сортами заключается в количестве различных пороков на 1 м погонный.
     p.article__p — ГОСТ, Прима – изделия с отлично обработанной поверхностью и минимальным количеством изъянов.
     p.article__p — А- присутствует небольшое количество сучков, трещин, смоляных кармашков.
@@ -188,4 +188,4 @@ block product
     p.article__p — простой монтаж;
     p.article__p — природный материал;
     p.article__p — доступная стоимость
-    p.article__p Имитацию бруса по цене от 330 до 1600 руб/м2 предлагает купить в Москве наша компания. Пиломатериал можно купить в розницу и оптом. Размерная сетка позволяет подобрать вариант, как для оформления интерьера, так и для облицовки фасада. Использование имитации бруса – это возможность «одеть» дом по последней моде за разумные деньги.
+    p.article__p Имитацию бруса по цене от 180 до 450 руб/м2 предлагает купить в Москве наша компания. Пиломатериал можно купить в розницу и оптом. Размерная сетка позволяет подобрать вариант, как для оформления интерьера, так и для облицовки фасада. Использование имитации бруса – это возможность «одеть» дом по последней моде за разумные деньги.
