--- a/src/osb-3-plita.pug
+++ b/src/osb-3-plita.pug
@@ -76,7 +76,7 @@ block product
     p.article__p Мы предлагает широкое разнообразие товара, среди которого можно найти необходимый стружечный лист. Наиболее применяемый среди отечественных мастеров Осб №3 -влагостойкий материал, который активно используется для возведения наружных и внутренних конструкций.
     h3.article__title Листы ОСБ: размеры и цены
 
-    p.article__p Толщина и номер ОСБ фанеры напрямую влияет не только на качество материала, но и на его стоимость. На данный момент цена начинается от за 640 рублей за плиту. Толщина же варьируется от 9мм до 18мм. Размеры листа как правило 1.22х2.44 мм
+    p.article__p Толщина и номер ОСБ фанеры напрямую влияет не только на качество материала, но и на его стоимость. На данный момент цена начинается от за 391 рублей за плиту. Толщина же варьируется от 8мм до 22мм. Размеры листа как правило 1.22х2.44 м, 1.25x2.5 м.
     h3.article__title Использование ОСБ
 
     p.article__p Сфер применения ОСБ панелей насчитывается огромное количество:
